--- a/Insurance_Fraud_Detection.ipynb
+++ b/Insurance_Fraud_Detection.ipynb
@@ -12,12 +12,40 @@
     "\n",
     "## Steps Involved:\n",
     "\n",
-    "1. **Data Preprocessing**: Cleaning and preparing the data for modeling.\n",
-    "2. **Feature Engineering**: Creating new features that can help in the fraud detection.\n",
-    "3. **Model Building**: Using different machine learning algorithms to build predictive models.\n",
-    "4. **Model Evaluation**: Evaluating the models to find the best performer.\n",
-    "5. **Hyperparameter Tuning**: Fine-tuning the models for optimal performance.\n",
-    "6. **Handling Imbalanced Data**: Using techniques like SMOTE or class weight adjustments.\n"
+    "1. **Data Preprocessing**:\n",
+    "\n",
+    "**Objective**: Cleaning and preparing the data for modeling.\n",
+    "\n",
+    "**Actions Taken**:\n",
+    "Categorical variables were encoded using Label Encoding.\n",
+    "The dataset was split into training and testing sets (70% training, 30% testing).\n",
+    "\n",
+    "2. **Feature Selection**:\n",
+    "\n",
+    "**Objective**: Choosing the most relevant features for the model.\n",
+    "\n",
+    "**Actions Taken**:\n",
+    "All available features were included for initial model building, excluding the target variable 'fraud_reported'.\n",
+    "\n",
+    "3. **Model Building**:\n",
+    "\n",
+    "**Objective**: Using different machine learning algorithms to build predictive models.\n",
+    "\n",
+    "**Models Used**:\n",
+    "Random Forest\n",
+    "Logistic Regression\n",
+    "Decision Tree\n",
+    "Naive Bayes\n",
+    "Support Vector Machine (SVM)\n",
+    "\n",
+    "4. **Model Evaluation**:\n",
+    "\n",
+    "**Objective**: Evaluating the models to find the best performer based on accuracy and classification metrics.\n",
+    "\n",
+    "**Actions Taken**:\n",
+    "Each model was trained on the training set and evaluated on the testing set.\n",
+    "Key metrics such as accuracy, precision, and recall were computed.\n",
+    "\n"
    ]
   },
   {
@@ -69,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22d64518",
+   "id": "23149bf0",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0339e48",
+   "id": "3d76f999",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5958105d",
+   "id": "4e62ac23",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6462ed9",
+   "id": "c6ebe838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca444667",
+   "id": "582ac04f",
    "metadata": {},
    "outputs": [],
    "source": [
